// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page: Recipient Email Verification renders single email verification tab correctly when selected 1`] = `
<Page
  empty={Object {}}
  title="Recipient Email Validation"
>
  <Tabs
    color="orange"
    connectBelow={true}
    selected={1}
    tabs={
      Array [
        Object {
          "content": "Validate A List",
          "onClick": [Function],
        },
        Object {
          "content": "Validate a Single Address",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <Connect(ReduxForm) />
  </Panel>
</Page>
`;

exports[`Page: Recipient Email Verification should render empty page when RV is not enabled 1`] = `<RVDisabledPage />`;

exports[`Page: Recipient Email Verification should render recipient validation page when enabled 1`] = `
<Page
  empty={Object {}}
  title="Recipient Email Validation"
>
  <Tabs
    color="orange"
    connectBelow={true}
    selected={0}
    tabs={
      Array [
        Object {
          "content": "Validate A List",
          "onClick": [Function],
        },
        Object {
          "content": "Validate a Single Address",
          "onClick": [Function],
        },
      ]
    }
  />
  <Panel>
    <Connect(ReduxForm) />
  </Panel>
  <Connect(WithContext(ListResults)) />
</Page>
`;
